[tool.poetry]
name         = "test"
version      = "0.1.0"
description  = ""
authors      = ["Your Name <you@example.com>"]
readme       = "README.md"
packages     = [{ include = "test" }]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "<3.0.0"
opencv-python = ">=4.11.0.86,<5.0.0.0"
ultralytics = ">=8.3.161,<9.0.0"
deep-sort-realtime = ">=1.3.2,<2.0.0"
lap = ">=0.5.12,<0.6.0"
filterpy = ">=1.4.5,<2.0.0"
scikit-learn = ">=1.7.0,<2.0.0"
sahi = ">=0.11.30,<0.12.0"
torchreid = "^0.2.5"
label-studio = "^1.20.0"
tqdm = "^4.67.1"
tk = "^0.1.0"
tensorboard = "^2.20.0"
yacs = "^0.1.8"
termcolor = "^3.1.0"
tabulate = "^0.9.0"
gdown = "^5.2.0"
faiss-cpu = "^1.11.0.post1"
cython = "^3.1.2"
ace-tools-open = "^0.1.0"

[build-system]
requires    = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# poetry run pip uninstall torch torchvision 
# poetry run pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128
# poetry run pip install torch-tensorrt tensorrt --extra-index-url https://download.pytorch.org/whl/cu128
# poetry run pip install "nvidia-modelopt[all]"